<resources>
    <string name="app_name">Tomafood</string>
    <string name="sort_by_stars">Sort by stars</string>
    <string name="sort_by_name">Sort by name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tick_the_box">If you do not wish to receive tasty TomaFood deals and discounts, tick this box</string>
    <string name="tnc">By creating an account you agree to our Terms and Conditions.</string>
    <string name="privacy_policy">Please read our Privacy Policy and Cookies Policy.</string>
    <string name="signup_with_facebook">Continue with Facebook</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="email">Email</string>
    <string name="order_again">After you\'ve enjoyed a takeaway, you\'ll be able to re-order it from fast from here.</string>
    <string name="search_by_postcode">Search by postcode</string>

    <!-- navigation -->
    <string name="restaurant">Restaurant</string>
    <string name="order">Orders</string>
    <string name="reservation">Reservation</string>
    <string name="settings">Settings</string>
</resources>
