<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_grey"
    tools:context=".ui.main.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/white_default"
        android:layout_height="@dimen/dimen_50">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="@dimen/font_20"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/black_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ll_header"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        app:layout_constraintTop_toBottomOf="@id/ll_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/brown_grey"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_BtnFacebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/btn_rounded_corner_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_header">

        <TextView
            android:id="@+id/txt_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_with_facebook"
            android:textSize="@dimen/font_18"
            android:fontFamily="@font/opensans_semibold"
            android:textColor="@color/white_default"
            android:paddingBottom="@dimen/dimen_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        app:layout_constraintTop_toBottomOf="@id/cl_BtnFacebook"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@color/brown_grey"/>


    <include
        android:id="@+id/ll_fields"
        layout="@layout/login_item"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />


    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        app:layout_constraintTop_toBottomOf="@id/ll_fields"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@color/brown_grey"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Tick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_default"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <TextView
            android:id="@+id/txt_Tick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cb_TNC"
            android:text="@string/tick_the_box"
            android:paddingLeft="@dimen/dimen_15"
            android:textSize="@dimen/font_12"
            android:textColor="@color/charcoal_grey_50"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginRight="5dp"
            android:paddingTop="@dimen/dimen_10"
            android:paddingBottom="@dimen/dimen_10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <CheckBox
            android:id="@+id/cb_TNC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/txt_Tick"
            android:layout_marginRight="@dimen/dimen_10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        app:layout_constraintTop_toBottomOf="@id/cl_Tick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/brown_grey"/>

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:text="@string/signup"
        android:textSize="@dimen/dimen_18"
        android:background="@drawable/btn_rounded_corner_red"
        android:textColor="@color/white_default"
        android:layout_marginRight="@dimen/dimen_15"
        android:layout_marginLeft="@dimen/dimen_15"
        android:textAllCaps="false"
        android:fontFamily="@font/opensans_semibold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4"
        android:layout_marginTop="@dimen/dimen_25"/>

    <TextView
        android:id="@+id/txt_TNC"
        android:text="@string/tnc"
        android:paddingLeft="@dimen/dimen_15"
        android:textSize="@dimen/font_12"
        android:textColor="@color/charcoal_grey_50"
        android:fontFamily="@font/opensans_semibold"
        android:layout_marginRight="5dp"
        android:paddingTop="@dimen/dimen_20"
        android:paddingBottom="@dimen/dimen_10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_SignUp"/>

    <TextView
        android:id="@+id/txt_Privacy"
        android:text="@string/privacy_policy"
        android:paddingLeft="@dimen/dimen_15"
        android:textSize="@dimen/font_12"
        android:textColor="@color/charcoal_grey_50"
        android:fontFamily="@font/opensans_semibold"
        android:layout_marginRight="5dp"
        android:paddingTop="@dimen/dimen_10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_TNC"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>