<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_default">

    <TextView
        android:id="@+id/txt_FirstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_FirstName"
        app:layout_constraintTop_toTopOf="@id/et_FirstName"
        app:layout_constraintBottom_toBottomOf="@id/et_FirstName"
        android:paddingTop="@dimen/dimen_15"
        android:paddingLeft="@dimen/dimen_15"
        android:text="@string/firstname"
        android:textSize="@dimen/font_15"
        android:textColor="@color/charcoal_grey_50"
        android:fontFamily="@font/opensans_semibold"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_FirstName"
        app:layout_constraintLeft_toRightOf="@id/txt_FirstName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:textColorHint="@color/very_light_pink"
        android:background="@android:color/transparent"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="@color/charcoal_grey_50"
        android:hint="@string/firstname"
        android:textSize="@dimen/font_15"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_FirstName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_point5"
        app:layout_constraintTop_toBottomOf="@id/et_FirstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/brown_grey"/>

    <TextView
        android:id="@+id/txt_LastName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_LastName"
        app:layout_constraintTop_toBottomOf="@id/view_FirstName"
        android:text="@string/lastname"
        android:paddingLeft="@dimen/dimen_15"
        android:textSize="@dimen/font_15"
        android:paddingTop="@dimen/dimen_15"
        android:textColor="@color/charcoal_grey_50"
        android:fontFamily="@font/opensans_semibold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_LastName"
        app:layout_constraintLeft_toRightOf="@id/txt_LastName"
        app:layout_constraintTop_toBottomOf="@id/view_FirstName"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:fontFamily="@font/opensans_semibold"
        android:paddingRight="@dimen/dimen_15"
        android:textColor="@color/charcoal_grey_50"
        android:textColorHint="@color/very_light_pink"
        android:paddingTop="@dimen/dimen_15"
        android:hint="@string/lastname"
        android:textSize="@dimen/font_15"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_LastName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_point5"
        app:layout_constraintTop_toBottomOf="@id/et_LastName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/brown_grey"/>

    <TextView
        android:id="@+id/txt_Email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_Email"
        app:layout_constraintTop_toBottomOf="@id/view_LastName"
        android:text="@string/email"
        android:textSize="@dimen/font_15"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_15"
        android:textColor="@color/charcoal_grey_50"
        android:fontFamily="@font/opensans_semibold"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_Email"
        app:layout_constraintLeft_toRightOf="@id/txt_Email"
        app:layout_constraintTop_toBottomOf="@id/view_LastName"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:fontFamily="@font/opensans_semibold"
        android:paddingTop="@dimen/dimen_15"
        android:textColor="@color/charcoal_grey_50"
        android:textColorHint="@color/very_light_pink"
        android:paddingRight="@dimen/dimen_15"
        android:hint="@string/email"
        android:textSize="@dimen/font_15"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_Email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_point5"
        app:layout_constraintTop_toBottomOf="@id/et_Email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/brown_grey"/>

    <TextView
        android:id="@+id/txt_Phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_Phone"
        app:layout_constraintTop_toBottomOf="@id/view_Email"
        android:text="@string/phone"
        android:textSize="@dimen/font_15"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_15"
        android:textColor="@color/charcoal_grey_50"
        android:fontFamily="@font/opensans_semibold"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_Phone"
        app:layout_constraintLeft_toRightOf="@id/txt_Phone"
        app:layout_constraintTop_toBottomOf="@id/view_Email"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:fontFamily="@font/opensans_semibold"
        android:paddingTop="@dimen/dimen_15"
        android:textColor="@color/charcoal_grey_50"
        android:textColorHint="@color/very_light_pink"
        android:hint="@string/phone"
        android:paddingRight="@dimen/dimen_15"
        android:textSize="@dimen/font_15"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_Phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_point5"
        app:layout_constraintTop_toBottomOf="@id/et_Phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/brown_grey"/>

    <TextView
        android:id="@+id/txt_Password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_Password"
        app:layout_constraintTop_toBottomOf="@id/view_Phone"
        android:text="@string/password"
        android:textSize="@dimen/font_15"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_15"
        android:textColor="@color/charcoal_grey_50"
        android:fontFamily="@font/opensans_semibold"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_Password"
        app:layout_constraintLeft_toRightOf="@id/txt_Password"
        app:layout_constraintTop_toBottomOf="@id/view_Phone"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:fontFamily="@font/opensans_semibold"
        android:paddingRight="@dimen/dimen_15"
        android:textColor="@color/charcoal_grey_50"
        android:textColorHint="@color/very_light_pink"
        android:paddingTop="@dimen/dimen_15"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/font_15"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_Password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_point5"
        app:layout_constraintTop_toBottomOf="@id/et_Password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/brown_grey"/>
</androidx.constraintlayout.widget.ConstraintLayout>